[gd_scene load_steps=2 format=3 uid="uid://ck6c55xeykxs3"]

[ext_resource type="Script" uid="uid://r80vyi7ahoa" path="res://menu_principal.gd" id="1_563nb"]

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 298.0
grow_vertical = 2
color = Color(0.640631, 0.240945, 2.88785e-07, 1)
script = ExtResource("1_563nb")

[node name="Play" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 31.0
offset_top = 24.0
offset_right = 254.0
offset_bottom = 87.0
text = "PLAY"

[node name="Param" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 31.0
offset_top = 117.0
offset_right = 254.0
offset_bottom = 180.0
text = "Menu"

[node name="Logs" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 31.0
offset_top = 209.0
offset_right = 254.0
offset_bottom = 272.0
text = "Historique"

[node name="Credit" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 31.0
offset_top = 291.0
offset_right = 254.0
offset_bottom = 354.0
text = "Credit"

[node name="Quite" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 31.0
offset_top = 538.0
offset_right = 254.0
offset_bottom = 601.0
text = "Quitter"

[connection signal="button_down" from="ColorRect/Play" to="ColorRect" method="go_play"]
[connection signal="button_down" from="ColorRect/Param" to="ColorRect" method="go_param"]
[connection signal="button_down" from="ColorRect/Logs" to="ColorRect" method="go_logs"]
[connection signal="button_down" from="ColorRect/Credit" to="ColorRect" method="go_credit"]
[connection signal="button_down" from="ColorRect/Quite" to="ColorRect" method="quit_game"]
